--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "mern-estate",
   "version": "1.0.0",
-  "description": "",
+  "description": "MERN Estate Project",
   "main": "index.js",
   "type": "module",
   "scripts": {
     "dev": "nodemon api/index.js",
     "start": "node api/index.js",
-    "build": "npm install && npm install --prefix client && npm run build --prefix client"
+    "build": "npm install --prefix client && npm run build --prefix client"
   },
   "keywords": [],
   "author": "",
@@ -19,7 +19,6 @@
     "express": "^4.18.2",
     "firebase": "^11.5.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^7.5.0",
-    "nodemon": "^3.0.1"
+    "mongoose": "^7.5.0"
   }
 }
